Modif chemin des fichiers

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Les Petits Plats</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <link href="/dist/output.css" rel="stylesheet">
+  <link href="./dist/output.css" rel="stylesheet">
 </head>
 <body class="bg-gray-100 text-gray-800">
 
@@ -39,7 +39,7 @@
 </div>
 
     <!-- Conteneur pour les tags -->
-    <div id="tag-container" class="mt-4 w-full flex flex-wrap justify-center gap-2">
+    <div id="tag-container" class="mt-4 w-full flex flex-wrap justify-center gap-2 text-black">
       <!-- Tags ajoutés dynamiquement ici -->
     </div>
   </header>
@@ -89,9 +89,9 @@
   </footer>
 
   <!-- Scripts JS -->
-  <script type="module" src="/script/index.js" defer></script>
-  <script type="module" src="/script/filtres.js" defer></script>
-  <script type="module" src="/script/main.js" defer></script>
+  <script type="module" src="./script/index.js" defer></script>
+  <script type="module" src="./script/filtres.js" defer></script>
+  <script type="module" src="./script/main.js" defer></script>
   
 
   <script>
