Modif chemin du background

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="bg-gray-100 text-gray-800">
 
   <!-- Header Section -->
-  <header class="h-screen flex flex-col justify-center items-center text-white" style="background-image: url('/assets/header-background.png');">
+  <header class="h-screen flex flex-col justify-center items-center text-white" style="background-image: url('./assets/header-background.png');">
     <h1 class="text-4xl font-bold absolute p-0 gap-0 opacity-1 transition ease-out duration-300" style="top: 51px; left: 69px;">
       Les Petits Plats ©
     </h1>
