Modif pour fonctionnement des tags

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </div>
 
     <!-- Conteneur pour les tags -->
-    <div id="tag-container" class="mt-4 w-full flex flex-wrap justify-center gap-2 text-black">
+    <div id="tag-container" class="mt-2 w-full flex flex-wrap justify-center gap-2 text-black bg-yellow-400">
       <!-- Tags ajoutés dynamiquement ici -->
     </div>
   </header>
