Correction W3C remplace section/div

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   </header>
 
   <!-- Filters Section -->
-  <section class="py-8 filters-container mt-6">
+  <div class="py-8 filters-container mt-6">
     <!-- Filtres dynamiques des ingrédients -->
     <div class="filter-group">
       <input 
@@ -111,12 +111,12 @@
     <p id="total-recipes" class="text-black-400 text-2xl">
       1500 recettes
     </p>
-  </section>
+  </div>
 
   <!-- Section où les médias seront affichés -->
-  <section id="media-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 p-6">
+  <div id="media-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 p-6">
     <!-- Les recettes/médias seront injectés dynamiquement ici -->
-  </section>
+  </div>
 
   <!-- Footer Section -->
   <footer class="bg-gray-800 text-white text-center py-4">
