--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <h1 class="text-4xl font-bold absolute p-0 gap-0 opacity-1 transition ease-out duration-300" style="top: 51px; left: 69px;">
       Les Petits Plats ©
     </h1>
-    <h2 class="text-7xl mt-6 text-center text-yellow-400">Cherchez parmi plus de 1500 recettes du quotidien, simples et délicieuses</h2>
+    <h2 class="text-6xl mt-6 flex w-2/3 text-center  text-yellow-400">Cherchez parmi plus de 1500 recettes du quotidien, simples et délicieuses</h2>
 
     <!-- Barre de recherche principale -->
     <div class="mt-6 flex w-2/3">
@@ -40,9 +40,9 @@
         id="search-input" 
         type="text" 
         placeholder="Rechercher une recette, un ingrédient, ..." 
-        class="text-black w-full p-4 focus:outline-none"
+        class="text-black w-full rounded-l p-4 focus:outline-none"
       >
-      <button class="bg-white text-white px-4 py-3 rounded-r-full hover:bg-green-700" aria-label="Rechercher">
+      <button class="bg-white text-white px-4 py-3 rounded-r hover:bg-green-700" aria-label="Rechercher">
         <img src="./assets/loupe.png" alt="icone d'une loupe">
       </button>
     </div>
@@ -58,7 +58,7 @@
     </div>
 
     <!-- Conteneur pour les tags -->
-    <div id="tag-container" class="mt-2 w-full flex flex-wrap justify-center gap-2 text-black bg-yellow-400">
+    <div id="tag-container" class="mt-2 w-fit top-50px flex flex-wrap justify-center gap-4 text-black bg-yellow-400">
       <!-- Tags ajoutés dynamiquement ici -->
     </div>
   </header>
