CSS tag container

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
 
     <!-- Conteneur pour les tags -->
-    <div id="tag-container" class="mt-2 w-fit top-50px flex flex-wrap justify-center gap-4 text-black bg-yellow-400">
+    <div id="tag-container" class="mt-2 w-fit flex flex-wrap justify-center gap-4 text-black bg-yellow-400">
       <!-- Tags ajoutés dynamiquement ici -->
     </div>
   </header>
