--- a/index.html
+++ b/index.html
@@ -56,11 +56,6 @@
     <div id="results-container" class="mt-4 w-full flex flex-wrap justify-center">
       <!-- Les résultats injectés dynamiquement ici -->
     </div>
-
-    <!-- Conteneur pour les tags -->
-    <div id="tag-container" class="mt-2 w-fit flex flex-wrap justify-center gap-4 text-black bg-yellow-400">
-      <!-- Tags ajoutés dynamiquement ici -->
-    </div>
   </header>
 
   <!-- Filters Section -->
@@ -77,7 +72,11 @@
         <option value="">Ingrédients</option>
         <!-- Options injectées dynamiquement ici -->
       </select>
+      <!-- Conteneur pour les tags -->
+    <div id="tag-container" class="mt-2 flex flex-wrap w-1/3 gap-4 text-black bg-yellow-400">
+      <!-- Tags ajoutés dynamiquement ici -->
     </div>
+  </div>
 
     <!-- Filtres dynamiques des appareils -->
     <div class="filter-group">
@@ -91,6 +90,10 @@
         <option value="">Appareils</option>
         <!-- Options injectées dynamiquement ici -->
       </select>
+      <!-- Conteneur pour les tags -->
+    <div id="tag-container" class="mt-2 flex flex-wrap w-1/3 gap-4 text-black bg-yellow-400">
+      <!-- Tags ajoutés dynamiquement ici -->
+    </div>
     </div>
 
     <!-- Filtres dynamiques des ustensiles -->
@@ -105,6 +108,10 @@
         <option value="">Ustensiles</option>
         <!-- Options injectées dynamiquement ici -->
       </select>
+      <!-- Conteneur pour les tags -->
+    <div id="tag-container" class="mt-2 flex flex-wrap w-1/3 gap-4 text-black bg-yellow-400">
+      <!-- Tags ajoutés dynamiquement ici -->
+    </div>
     </div>
 
     <!-- Compteur de recettes -->
