--- a/index.html
+++ b/index.html
@@ -16,13 +16,18 @@
     .filter-group {
       flex: 1; /* Permet aux groupes de filtre de se redimensionner également */
       margin-right: 16px; /* Espace entre les filtres */
+      padding-top: 15px;
     }
     .search-input {
-      width: 100%;
+      width: 90%;
+      margin-left: 10px;
+      
     }
     .search-input, .filter-group select {
       margin-bottom: 0.5rem;
     }
+
+   
   </style>
 </head>
 <body class="bg-gray-100 text-gray-800">
@@ -59,63 +64,67 @@
   </header>
 
   <!-- Filters Section -->
-  <div class="py-8 filters-container mt-6">
+  <div class="py-8 mt-2 filters-container  w-2/3">
     <!-- Filtres dynamiques des ingrédients -->
-    <div class="filter-group">
+    <div class="filter-group p-8 mt-0 pt-0">
+      <label for="filter-select" class="absolute w-1/6 top-[-10px]  text-gray-500 bg-white px-2 text-l cursor-pointer">Ingrédients</label>
       <input 
         id="ingredients-search" 
         type="text" 
         placeholder="Rechercher un ingrédient" 
-        class="search-input p-2 rounded border"
+        class="search-input P-2 w-full bg-white rounded pb-0 mb-0 relative top-8 pl-2 "
       >
-      <select aria-label="Rechercher un ingrédient"  id="ingredients" class="p-2 rounded border" multiple>
+     
+      <select aria-label="Rechercher un ingrédient"  id="ingredients" class=" w-full rounded border mt-0 pl-2" multiple>
         <option value="">Ingrédients</option>
         <!-- Options injectées dynamiquement ici -->
       </select>
       <!-- Conteneur pour les tags -->
-    <div id="tag-container" class="mt-2 flex flex-wrap w-1/3 gap-4 text-black bg-yellow-400">
+    <div id="tag-container" class="mt-2 flex flex-wrap  gap-4 text-black bg-yellow-400">
       <!-- Tags ajoutés dynamiquement ici -->
     </div>
   </div>
 
     <!-- Filtres dynamiques des appareils -->
-    <div class="filter-group">
+    <div class="filter-group p-8 mt-0 pt-0">
+      <label for="filter-select" class="absolute w-1/6 top-[-10px] text-gray-500 bg-white px-2 text-l cursor-pointer">Appareils</label>
       <input 
         id="appareils-search" 
         type="text" 
         placeholder="Rechercher un appareil" 
-        class="search-input p-2 rounded border"
+        class="search-input P-2 w-full bg-white rounded pb-0 mb-0 relative top-8 pl-2 "
       >
-      <select aria-label="Rechercher un appareil"   id="appareils" class="p-2 rounded border" multiple>
+      <select aria-label="Rechercher un appareil"  id="appareils" class=" w-full rounded border mt-0 pl-2" multiple>
         <option value="">Appareils</option>
         <!-- Options injectées dynamiquement ici -->
       </select>
       <!-- Conteneur pour les tags -->
-    <div id="tag-container" class="mt-2 flex flex-wrap w-1/3 gap-4 text-black bg-yellow-400">
+    <div id="tag-container" class="mt-2 flex flex-wrap  gap-4 text-black bg-yellow-400">
       <!-- Tags ajoutés dynamiquement ici -->
     </div>
     </div>
 
     <!-- Filtres dynamiques des ustensiles -->
-    <div class="filter-group">
+    <div class="filter-group p-8 mt-0 pt-0">
+      <label for="filter-select" class="absolute w-1/6 top-[-10px] text-gray-500 bg-white px-2 text-l cursor-pointer">Ustensiles</label>
       <input 
         id="ustensiles-search" 
         type="text" 
         placeholder="Rechercher un ustensile" 
-        class="search-input p-2 rounded border"
+        class="search-input P-2 w-full bg-white rounded pb-0 mb-0 relative top-8 pl-2 "
       >
-      <select aria-label="Rechercher un ustensile"   id="ustensiles" class="p-2 rounded border" multiple>
+      <select aria-label="Rechercher un ustensile"  id="ustensiles" class=" w-full rounded border mt-0 pl-2" multiple>
         <option value="">Ustensiles</option>
         <!-- Options injectées dynamiquement ici -->
       </select>
       <!-- Conteneur pour les tags -->
-    <div id="tag-container" class="mt-2 flex flex-wrap w-1/3 gap-4 text-black bg-yellow-400">
+    <div id="tag-container" class="mt-2 flex flex-wrap  gap-4 text-black bg-yellow-400">
       <!-- Tags ajoutés dynamiquement ici -->
     </div>
     </div>
 
     <!-- Compteur de recettes -->
-    <p id="total-recipes" class="text-black-400 text-2xl">
+    <p id="total-recipes" class="text-black-400 text-2xl  ">
       1500 recettes
     </p>
   </div>
