--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
   <label for="ingredients" class="relative block  bg-white text-gray-500 px-2 py-2 rounded-t cursor-pointer">
     Ingrédients <span class="arrow">&#x25B2;</span>
   </label>
-  <div class=" flex w-64">
-  <input id="ingredients-search" type="text" placeholder="Rechercher un ingrédient" class="search-input w-full px-3 py-2 pr-10 border border-gray-300 focus:outline-none focus:ring-2 focus:ring-gray-300">
+  <div class=" flex w-64 border  border-gray-300">
+  <input id="ingredients-search" type="text" placeholder="Rechercher un ingrédient" class="search-input w-full px-3 py-2 pr-10  focus:outline-none focus:ring-2 focus:ring-gray-300">
   <button class="bg-white text-white px-4 py-3 rounded-r hover:bg-green-700" aria-label="Rechercher">
     <img src="./assets/loupe-blanche.png" alt="icone d'une loupe" class="loupe-blanche " >
   </button>
@@ -90,8 +90,8 @@
   <label for="appareils" class="relative block  bg-white text-gray-500 px-2 py-2 rounded-t cursor-pointer">
     Appareils <span class="arrow">&#x25B2;</span>
   </label>
-  <div class="flex w-64">
-  <input id="appareils-search" type="text" placeholder="Rechercher un appareil" class="search-input w-full px-3 py-2 pr-10 border border-gray-300 focus:outline-none focus:ring-2 focus:ring-gray-300">
+  <div class="flex w-64 border  border-gray-300">
+  <input id="appareils-search" type="text" placeholder="Rechercher un appareil" class="search-input w-full px-3 py-2 pr-10  focus:outline-none focus:ring-2 focus:ring-gray-300">
   <button class="bg-white text-white px-4 py-3 rounded-r hover:bg-green-700" aria-label="Rechercher">
     <img src="./assets/loupe-blanche.png" alt="icone d'une loupe" class="loupe-blanche " >
   </button>
@@ -107,10 +107,10 @@
   <label for="ustensiles" class="relative block  bg-white text-gray-500 px-2 py-2 rounded-t cursor-pointer">
     Ustensiles <span class="arrow">&#x25B2;</span>
   </label>
-  <div class="flex w-64">
-  <input id="ustensiles-search" type="text" placeholder="Rechercher un ustensile" class="search-input w-full px-3 py-2 pr-10 border border-gray-300 focus:outline-none focus:ring-2 focus:ring-gray-300">
-  <button class="bg-white text-white px-4 py-3 rounded-r hover:bg-green-700" aria-label="Rechercher">
-    <img src="./assets/loupe-blanche.png" alt="icone d'une loupe" class="loupe-blanche " >
+  <div class="flex w-64 border  border-gray-300">
+  <input id="ustensiles-search" type="text" placeholder="Rechercher un ustensile" class="search-input w-full px-3 py-2 pr-10  focus:outline-none focus:ring-2 focus:ring-gray-300">
+  <button class="bg-white text-white px-4 py-3 rounded-r  hover:bg-green-700" aria-label="Rechercher">
+    <img src="./assets/loupe-blanche.png" alt="icone d'une loupe" class="loupe-blanche" >
   </button>
   </div>
   <select aria-label="Rechercher un ustensile" id="ustensiles" class=" w-full rounded border mt-1 hidden" multiple>
