--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         id="search-input" 
         type="text" 
         placeholder="Rechercher une recette, un ingrédient, ..." 
-        class="text-black w-full rounded-l p-4 focus:outline-none"
+        class="text-black w-full rounded-l p-4 focus:outline-none focus:placeholder-transparent"
       >
       <button class="bg-white text-white px-4 py-3 rounded-r hover:bg-green-700" aria-label="Rechercher">
         <img src="./assets/loupe.png" alt="icone d'une loupe">
@@ -66,16 +66,18 @@
  <div class="container mx-auto py-4">
   <div class="flex justify-between items-start mb-2">
     <!-- Les filtres sont placés côte à côte -->
-    <div class="flex gap-4">
+    <div class="flex gap-8">
 
       <!-- Filtres dynamiques des ingrédients -->
-<div class="relative w-40">
-  <label for="ingredients" class="relative block  bg-white text-gray-500 px-2 py-2 rounded-t cursor-pointer">
-    Ingrédients <span class="arrow">&#x25B2;</span>
+<div class="relative w-52 bg-white ml-2 pl-2 rounded">
+  <label for="ingredients" class="relative block  bg-white text-black-500 px-2 py-2 rounded-t cursor-pointer">
+    Ingrédients  <span class="arrow ml-2"> <!-- Ajoute un espace entre le texte et l'image -->
+      <img src="./assets/flèche-descendante.png" alt="Flèche vers le haut" class="w-4 h-4 inline-block"> <!-- Image de la flèche -->
+    </span>
   </label>
-  <div class=" flex w-40 border  border-gray-300">
-  <input id="ingredients-search" type="text" placeholder="Rechercher un ingrédient" class="search-input w-full px-3 py-2 pr-10  focus:outline-none focus:ring-2 focus:ring-gray-300">
-  <button class="bg-white text-white px-4 py-3 rounded-r hover:bg-green-700" aria-label="Rechercher">
+  <div class=" flex w-48 border rounded  border-gray-300">
+  <input id="ingredients-search" type="text" placeholder="Rechercher" class="search-input w-full px-2 py-2 pr-10 focus:outline-none focus:placeholder-transparent ">
+  <button class="bg-white text-white px-4 py-3 rounded-r" aria-label="Rechercher">
     <img src="./assets/loupe-blanche.png" alt="icone d'une loupe" class="loupe-blanche " >
   </button>
 </div>
@@ -86,13 +88,15 @@
 </div>
 
 <!-- Filtres dynamiques des appareils -->
-<div class="relative w-40">
-  <label for="appareils" class="relative block  bg-white text-gray-500 px-2 py-2 rounded-t cursor-pointer">
-    Appareils <span class="arrow">&#x25B2;</span>
+<div class="relative w-52 bg-white ml-2 pl-2 rounded">
+  <label for="appareils" class="relative block  bg-white text-black-500 px-2 py-2 rounded-t cursor-pointer">
+    Appareils <span class="arrow ml-2"> <!-- Ajoute un espace entre le texte et l'image -->
+      <img src="./assets/flèche-descendante.png" alt="Flèche vers le haut" class="w-4 h-4 inline-block"> <!-- Image de la flèche -->
+    </span>
   </label>
-  <div class="flex w-40 border  border-gray-300">
-  <input id="appareils-search" type="text" placeholder="Rechercher un appareil" class="search-input w-full px-3 py-2 pr-10  focus:outline-none focus:ring-2 focus:ring-gray-300">
-  <button class="bg-white text-white px-4 py-3 rounded-r hover:bg-green-700" aria-label="Rechercher">
+  <div class="flex w-48 border rounded border-gray-300">
+  <input id="appareils-search" type="text" placeholder="Rechercher" class="search-input w-full px-2 py-2 pr-10  focus:outline-none focus:placeholder-transparent">
+  <button class="bg-white text-white px-4 py-3 rounded-r" aria-label="Rechercher">
     <img src="./assets/loupe-blanche.png" alt="icone d'une loupe" class="loupe-blanche " >
   </button>
   </div>
@@ -103,13 +107,15 @@
 </div>
 
 <!-- Filtres dynamiques des ustensiles -->
-<div class="relative w-40">
-  <label for="ustensiles" class="relative block  bg-white text-gray-500 px-2 py-2 rounded-t cursor-pointer">
-    Ustensiles <span class="arrow">&#x25B2;</span>
+<div class="relative w-52 bg-white ml-2 pl-2 rounded">
+  <label for="ustensiles" class="relative block  bg-white text-black-500 px-2 py-2 rounded-t cursor-pointer">
+    Ustensiles <span class="arrow ml-2"> <!-- Ajoute un espace entre le texte et l'image -->
+      <img src="./assets/flèche-descendante.png" alt="Flèche vers le haut" class="w-4 h-4 inline-block"> <!-- Image de la flèche -->
+    </span>
   </label>
-  <div class="flex w-40 border  border-gray-300">
-  <input id="ustensiles-search" type="text" placeholder="Rechercher un ustensile" class="search-input w-full px-3 py-2 pr-10  focus:outline-none focus:ring-2 focus:ring-gray-300">
-  <button class="bg-white text-white px-4 py-3 rounded-r  hover:bg-green-700" aria-label="Rechercher">
+  <div class="flex w-48 border rounded border-gray-300">
+  <input id="ustensiles-search" type="text" placeholder="Rechercher" class="search-input w-full px-2 py-2 pr-10  focus:outline-none focus:placeholder-transparent">
+  <button class="bg-white text-white px-4 py-3 rounded-r " aria-label="Rechercher">
     <img src="./assets/loupe-blanche.png" alt="icone d'une loupe" class="loupe-blanche" >
   </button>
   </div>
@@ -124,7 +130,7 @@
  <p id="total-recipes" class="text-black-500 text-2xl font-medium pt-2">1500 recettes</p>
 </div>
  <!-- Conteneur pour les tags sélectionnés -->
-    <div id="tag-container" class=" mt-2 flex flex-wrap gap-4 text-black "></div>
+    <div id="tag-container" class=" mt-2 flex flex-wrap gap-4 text-black pl-2"></div>
   </div>
 
  
