Modification des flèches

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
       <!-- Filtres dynamiques des ingrédients -->
 <div class="relative w-52 bg-white ml-2 pl-2 rounded">
   <label for="ingredients" class="relative block  bg-white text-black-500 px-2 py-2 rounded-t cursor-pointer">
-    Ingrédients  <span class="arrow ml-2"> <!-- Ajoute un espace entre le texte et l'image -->
-      <img src="./assets/flèche-descendante.png" alt="Flèche vers le haut" class="w-4 h-4 inline-block"> <!-- Image de la flèche -->
+    Ingrédients  <span class="arrow ml-20"> <!-- Ajoute un espace entre le texte et l'image -->
+      <img src="./assets/flèche-descendante.png" alt="Flèche vers le bas" class="w-4 h-4 inline-block"> <!-- Image de la flèche -->
     </span>
   </label>
   <div class=" flex w-48 border rounded  border-gray-300">
@@ -90,8 +90,8 @@
 <!-- Filtres dynamiques des appareils -->
 <div class="relative w-52 bg-white ml-2 pl-2 rounded">
   <label for="appareils" class="relative block  bg-white text-black-500 px-2 py-2 rounded-t cursor-pointer">
-    Appareils <span class="arrow ml-2"> <!-- Ajoute un espace entre le texte et l'image -->
-      <img src="./assets/flèche-descendante.png" alt="Flèche vers le haut" class="w-4 h-4 inline-block"> <!-- Image de la flèche -->
+    Appareils <span class="arrow ml-20"> <!-- Ajoute un espace entre le texte et l'image -->
+      <img src="./assets/flèche-descendante.png" alt="Flèche vers le bas" class="w-4 h-4 inline-block"> <!-- Image de la flèche -->
     </span>
   </label>
   <div class="flex w-48 border rounded border-gray-300">
@@ -109,8 +109,8 @@
 <!-- Filtres dynamiques des ustensiles -->
 <div class="relative w-52 bg-white ml-2 pl-2 rounded">
   <label for="ustensiles" class="relative block  bg-white text-black-500 px-2 py-2 rounded-t cursor-pointer">
-    Ustensiles <span class="arrow ml-2"> <!-- Ajoute un espace entre le texte et l'image -->
-      <img src="./assets/flèche-descendante.png" alt="Flèche vers le haut" class="w-4 h-4 inline-block"> <!-- Image de la flèche -->
+    Ustensiles <span class="arrow ml-20"> <!-- Ajoute un espace entre le texte et l'image -->
+      <img src="./assets/flèche-descendante.png" alt="Flèche vers le bas" class="w-4 h-4 inline-block"> <!-- Image de la flèche -->
     </span>
   </label>
   <div class="flex w-48 border rounded border-gray-300">
