--- a/index.html
+++ b/index.html
@@ -96,14 +96,15 @@
       <!-- Filtres dynamiques des ingrédients -->
 <div class="relative w-52 bg-white ml-2 pl-2 rounded">
   <label for="ingredients" class="relative block  bg-white text-black-500 px-2 py-2 rounded-t cursor-pointer">
-    Ingrédients  <span class="arrow ml-20"> <!-- Ajoute un espace entre le texte et l'image -->
+    Ingrédients  
+    <span class="arrow ml-20"> <!-- Ajoute un espace entre le texte et l'image -->
       <img src="./assets/flèche-descendante.png" alt="Flèche vers le bas" class="w-4 h-4 inline-block"> <!-- Image de la flèche -->
     </span>
   </label>
   <!-- Conteneur pour l'input et la loupe -->
   <div id="ingredients-input-container" class=" flex w-48 border rounded  border-gray-300 opacity-0 pointer-events-none transition-opacity duration-300">
   <input id="ingredients-search" type="text" placeholder="Rechercher" class="search-input w-full px-2 py-2 pr-10 focus:outline-none focus:placeholder-transparent " autocomplete="off">
-  <button id="clear-search" class="absolute right-10 bottom-24 pb-2  text-gray-400 hidden" aria-label="Effacer la recherche">
+  <button id="ingredients-clear-search" class="absolute right-10 bottom-24 pb-2  text-gray-400 hidden" aria-label="Effacer la recherche">
     <img src="./assets/croix-grise.png" alt="icone d'une croix" class="croix-grise " ><!-- Symbole de la croix -->
   </button>
   <button class="bg-white text-white px-4 py-3 rounded-r" aria-label="Rechercher">
@@ -116,43 +117,52 @@
   </select>
 </div>
 
-<!-- Filtres dynamiques des appareils -->
-<div class="relative w-52 bg-white ml-2 pl-2 rounded">
+ <!-- Filtres dynamiques des appareils -->
+ <div class="relative w-52 bg-white ml-2 pl-2 rounded">
   <label for="appareils" class="relative block  bg-white text-black-500 px-2 py-2 rounded-t cursor-pointer">
-    Appareils <span class="arrow ml-20"> <!-- Ajoute un espace entre le texte et l'image -->
+    Appareils  
+    <span class="arrow ml-20"> <!-- Ajoute un espace entre le texte et l'image -->
       <img src="./assets/flèche-descendante.png" alt="Flèche vers le bas" class="w-4 h-4 inline-block"> <!-- Image de la flèche -->
     </span>
   </label>
-  <div class="flex w-48 border rounded border-gray-300">
-  <input id="appareils-search" type="text" placeholder="Rechercher" class="search-input w-full px-2 py-2 pr-10  focus:outline-none focus:placeholder-transparent">
+  <!-- Conteneur pour l'input et la loupe -->
+  <div id="appareils-input-container" class=" flex w-48 border rounded  border-gray-300 opacity-0 pointer-events-none transition-opacity duration-300">
+  <input id="appareils-search" type="text" placeholder="Rechercher" class="search-input w-full px-2 py-2 pr-10 focus:outline-none focus:placeholder-transparent " autocomplete="off">
+  <button id="appareils-clear-search" class="absolute right-10 bottom-24 pb-2  text-gray-400 hidden" aria-label="Effacer la recherche">
+    <img src="./assets/croix-grise.png" alt="icone d'une croix" class="croix-grise " ><!-- Symbole de la croix -->
+  </button>
   <button class="bg-white text-white px-4 py-3 rounded-r" aria-label="Rechercher">
     <img src="./assets/loupe-blanche.png" alt="icone d'une loupe" class="loupe-blanche " >
   </button>
-  </div>
-  <select aria-label="Rechercher un appareil" id="appareils" class=" w-full rounded border mt-1 hidden" multiple>
+</div>
+  <select  aria-label="Rechercher un appareil" id="appareils" class=" w-full rounded border mt-1 hidden " multiple>
     <option value="">Appareils</option>
     <!-- Options injectées dynamiquement ici -->
   </select>
 </div>
 
-<!-- Filtres dynamiques des ustensiles -->
+<!-- Filtres dynamiques des appareils -->
 <div class="relative w-52 bg-white ml-2 pl-2 rounded">
   <label for="ustensiles" class="relative block  bg-white text-black-500 px-2 py-2 rounded-t cursor-pointer">
-    Ustensiles <span class="arrow ml-20"> <!-- Ajoute un espace entre le texte et l'image -->
+    Ustensiles  
+    <span class="arrow ml-20"> <!-- Ajoute un espace entre le texte et l'image -->
       <img src="./assets/flèche-descendante.png" alt="Flèche vers le bas" class="w-4 h-4 inline-block"> <!-- Image de la flèche -->
     </span>
   </label>
-  <div class="flex w-48 border rounded border-gray-300">
-  <input id="ustensiles-search" type="text" placeholder="Rechercher" class="search-input w-full px-2 py-2 pr-10  focus:outline-none focus:placeholder-transparent">
-  <button class="bg-white text-white px-4 py-3 rounded-r " aria-label="Rechercher">
-    <img src="./assets/loupe-blanche.png" alt="icone d'une loupe" class="loupe-blanche" >
+  <!-- Conteneur pour l'input et la loupe -->
+  <div id="ustensiles-input-container" class=" flex w-48 border rounded  border-gray-300 opacity-0 pointer-events-none transition-opacity duration-300">
+  <input id="ustensiles-search" type="text" placeholder="Rechercher" class="search-input w-full px-2 py-2 pr-10 focus:outline-none focus:placeholder-transparent " autocomplete="off">
+  <button id="ustensiles-clear-search" class="absolute right-10 bottom-24 pb-2  text-gray-400 hidden" aria-label="Effacer la recherche">
+    <img src="./assets/croix-grise.png" alt="icone d'une croix" class="croix-grise " ><!-- Symbole de la croix -->
   </button>
-  </div>
-  <select aria-label="Rechercher un ustensile" id="ustensiles" class=" w-full rounded border mt-1 hidden" multiple>
+  <button class="bg-white text-white px-4 py-3 rounded-r" aria-label="Rechercher">
+    <img src="./assets/loupe-blanche.png" alt="icone d'une loupe" class="loupe-blanche " >
+  </button>
+</div>
+  <select  aria-label="Rechercher un ustensile" id="ustensiles" class=" w-full rounded border mt-1 hidden " multiple>
     <option value="">Ustensiles</option>
     <!-- Options injectées dynamiquement ici -->
   </select>
-</div>
 </div>
 
  <!-- Compteur de recettes -->
